# ClawLab

./: .gitignore  README.md
rust/: .gitignore  build_output.txt  check_output.txt  error.txt  errors.txt  models_list_utf8.json
rust/crates/api/: Cargo.toml
rust/crates/api/src/: client.rs  error.rs  lib.rs  types.rs
rust/crates/api/src/providers/: gemini.rs  mod.rs  openai_compat.rs
rust/crates/claw-cli/src/: main.rs
rust/crates/plugins/src/: hooks.rs
rust/crates/runtime/src/: compact.rs  session.rs  usage.rs
rust/crates/server/: Cargo.toml  errors.txt
rust/crates/server/src/: auth.rs  chat.rs  lib.rs  main.rs  session.rs  session_handler.rs  terminal.rs  types.rs
rust/crates/server/src/db/: chat.rs  mod.rs
rust/crates/tools/: .gitignore
web-ui/: .gitignore  package-lock.json  package.json
web-ui/src/app/: globals.css  layout.tsx  page.tsx
web-ui/src/app/agent/: page.tsx
web-ui/src/components/: ChatPanel.tsx  CommandCard.tsx  HeroSection.tsx  TerminalPanel.tsx
web-ui/src/components/auth/: AuthButtons.tsx  LoginModal.tsx
web-ui/src/components/landing/: LandingComponents.tsx  Terminal.tsx
web-ui/src/components/mascot/: TeddyMascot.tsx
web-ui/src/components/ui/: Backgrounds.tsx
web-ui/src/context/: AuthContext.tsx
web-ui/src/lib/: api.ts
web-ui/src/types/: index.ts
