[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tokio-stream = "0.1"
bytes = "1"
futures-util = "0.3"

[lints]
workspace = true
